--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "package-lock.json": "^1.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-checkbox-tree": "^1.7.2",
@@ -22,7 +23,8 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.11"
   },
   "scripts": {
     "start": "set PORT=4000 && react-scripts start",
