--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "admin-app",
   "version": "0.1.0",
   "engines": {
-    "node": "v14.15.4"
+    "node": "14.x"
   },
   "private": true,
   "dependencies": {
@@ -24,7 +24,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1",
-    "yarn": "^1.22.11"
+    "yarn": "^1.22.11",
+    "yarn-install": "^1.0.0"
   },
   "scripts": {
     "start": "set PORT=4000 && react-scripts start",
